hphp/test/quick/impl_abstract_dv_b_boolean.php.expectf
HipHop Fatal error: Declaration of B::b() must be compatible with that of A::b() in %s on line 3
